@@ -1,3 +1,7 @@
+2023-10-20  Charlie Zender  <zender@uci.edu>
+
+	* Add swn_rrtmgp_bnd5.nco, swn_prf.sh to simulate/diagnose VIS+NIR components of RRTMG Band 5
+
 2023-10-17  Charlie Zender  <zender@uci.edu>
 
 	* Update to gfortran-13 on Homebrew
